--- a/functions/package.json
+++ b/functions/package.json
@@ -4,13 +4,14 @@
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
+    "dev": "nodemon --exec npm run serve --ignore lib/ -e js,mjs,json,ts",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "main": "lib/index.js",
   "dependencies": {
@@ -18,9 +19,10 @@
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.0",
+    "nodemon": "^2.0.4",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "typescript": "^3.8.0"
   },
   "private": true
 }
